[project]
name = "volt-flow-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.5",
    "fastapi>=0.139.0",
    "ocpp>=2.1.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.51",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
    "uvicorn>=0.50.2",
]
